增加模拟部分和空气质量部分

--- a/report/04-simulation.Rmd
+++ b/report/04-simulation.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "开题报告"
-author: "Li"
+title: "蒙特卡洛模拟"
+author: "Jin"
 date: "2019-04-15"
 css: ./style/markdown.css
 autoEqnLabels: true
@@ -11,10 +11,6 @@ notice: '@*'
 csl: ./style/chinese-gb7714-2005-numeric.csl
 link-citations: true
 ---
-
-**TODO**
-
-
 
 
 ```{r setup, echo=F}
@@ -35,9 +31,42 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 蒙特卡洛模拟 
 
+在前两章我们分别介绍了广义可加混合模型的模型设定以及两种参数估计方法，基于频率统
+计的双重惩罚拟似然方法(DPQL)和基于贝叶斯统计的切片抽样马尔科夫链蒙特卡洛方法
+(MCMC)。
+
+广义可加混合模型为时间相关或空间相关数据的回归分析提供了强大的工具。在广义可加混
+合模型的实际应用中，通常会出现以下一些问题：面对不同类型的观测数据，两种参数估计
+方法的估计精度如何？估计精度在模型的固定效应和随机效应估计方面是否有差异？两种估
+计方法对于参数估计的效率如何？在因变量具有不同分布时，如分别具有正态分布，二项分
+布，泊松分布时，两种估计方法的表现是否会发生变化。不同类型的自变量所带来的影响有
+多大？自变量以线性形式或非参数项的形式进入模型会对两种参数估计方法带来怎样的影响？
+随机效应的结构是否会影响最终的参数估计精度？
+
+要在实际的各种复杂情况下找到上面这些问题的答案，仅仅进行理论上的分析是不够的。因
+此，我们需要进行蒙特卡洛模拟研究，因为其可以在模拟数据的基础上对这些问题给出部分
+答案。本章进行广义可加混合模型的蒙特卡洛模拟研究。由于因变量分布类型不同，因变量
+的密度函数就不同，也即似然函数的形式会有较大变化，从而对参数估计过程带来较大影响。
+因此，本章蒙特卡洛模拟研究分别从广义可加混合模型的三种不同因变量分布：正态分布，
+二项分布和泊松分布进行，这就构成了广义可加混合模型的三个具体模型：正态可加混合模
+型，Logit可加混合模型和泊松可加混合模型。本章的三节内容分别对这三种模型进行模拟
+研究。
+
 ## 正态可加混合模型模拟分析
 
+当广义可加混合模型的因变量服从正态分布时，就是正态可加混合模型，或者直接称为可加
+混合模型。如果可加混合模型中不带有非参数回归项，也即自变量都是以线性形式进入模型
+中，这时模型就变化为线性混合模型；如果模型中不带有随机效应，则模型退化为非参数回
+归或半参数回归模型；如果模型中同时带有线性形式自变量，非参数回归项和随机效应时，
+则可称为半参数混合模型。下面分别对各种情况进行模型研究。
+
 ### 不带有非参数回归项的混合模型
+当广义可加混合模型的因变量服从正态分布，且不包含随机效应时，则模型退化为线性混合
+模型。我们考虑以下的蒙特卡洛实验：
+
+$$
+
+$$
 
 ### 不带有随机效应的可加模型
 
