--- a/report/05-aqi-des.Rmd
+++ b/report/05-aqi-des.Rmd
@@ -21,6 +21,7 @@ link-citations: true
 knitr::opts_knit$set(root.dir = getwd())
 knitr::opts_chunk$set(echo = FALSE, results = 'hide')
 knitr::opts_chunk$set(warning = FALSE, message=FALSE)
+options(knitr.kable.NA = '')
 ```
 
 ```{r prepare}
@@ -35,11 +36,100 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 城市空气质量状况描述及时空分布特征
 
-## 空气质量相关理论
+## 空气质量简介
 
 ### 空气质量指数简介
 
+在《环境空气质量标准》中，将环境空气定义为人群、植物、动物和建筑物所暴露的室外空气。环境空气
+功能区分为二类：一类为自然保护区、风景名胜区和其他需要特殊保护的区域；二类区为居住区、商业交
+通居民混合区、文化区、工业区和农村地区。一类区适用一级浓度限值，二类区适用二级浓度限值。环境
+空气常规污染物基本浓度限值如下表所示。
+
+```{r tab1, eval=T,results='markup', cache=F}
+tab1 <- read.csv('./results/airpollution.csv')
+knitr::kable(tab1, row.names =F, align = "l", caption="环境空气污染物基本项目浓度限值",
+      longtable = TRUE, booktabs = TRUE, linesep  = "", escape = F)
+```
+
+注：颗粒物（粒径小于等于10 $\mu m$）指的是环境空气中空气动力学当量直径小于等于10
+$\mu m$ 的颗粒物，也称可吸入颗粒物；颗粒物（粒径小于等于2.5 $\mu m$ ）指的是环境
+空气中空气动力学当量直径小于等于2.5 $\mu m$ 的颗粒物，也称细颗粒物。1小时平均指
+任何1小时污染物浓度的算术平均值；8小时平均指连续8小时平均浓度的算术平均值，也称8
+小时滑动平均；24小时平均指一个自然日24小时平均浓度的算术平均值，也称为日平均；年
+平均指一个日历年内各日平均浓度的算术平均值。
+
+《环境空气质量指数（AQI）技术规定（试行）》对空气质量指数及常规污染物进行了定义。空气质量
+指数（air quality index，AQI）是定量描述空气质量状况的无量纲指数，是空气质量分指数中的最大
+值。空气质量分指数（individual air quality index，IAQI）指单项污染物的空气质量指数。用数学
+语言表述即为： $\mathrm{AQI}=\max \left\{\mathrm{IAQI}_{1}, \mathrm{IAQI}_{2},
+\ldots, \mathrm{IAQI}_{\mathrm{n}}\right\}$ ，
+其中 $n$ 表示污染物项目。 AQI 大于50时 IAQI 最大的污染物为首要污染物指，若
+IAQI 最大的污染物为两项或两项以上，则并列为首要污染物。 IAQI 大于100的污染物为超标污染物。
+
+空气质量指数相关信息如表2所示。当空气质量为优时，空气质量令人满意，基本无空气污染，各类人群
+可正常活动。当空气质量为良时，空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较
+弱影响，此时，极少数异常敏感人群应减少户外活动。当空气质量为轻度污染时，易感人群症状有轻度
+加剧，健康人群出现刺激症状，儿童、老年人及心脏病、呼吸系统疾病患者应减少长时间、高强度的户
+外锻炼。当空气质量为中度污染时，会进一步加剧易感人群的症状，可能对健康人群心脏、呼吸系统有
+影响，此时，儿童、老年人及心脏病、呼吸系统疾病患者应避免长时间、高强度的户外锻炼，一般人群
+也要适量减少户外运动。当空气质量为重度污染时，心脏病和肺病患者症状显著加剧，运动耐受力降低，
+健康人群普遍出现一些症状，这时，儿童、老年人和心脏病患者应停留在室内，停止户外运动，一般人
+群也需要减少户外运动。当空气质量为严重污染时，健康人群运动耐受力降低，有明显强烈的症状，会
+提前出现某些疾病，儿童、老年人和病人应当留在室内，避免体力消耗，一般人群也应避免户外活动。
+
+```{r tab2, eval=T,results='markup', cache=F}
+tab2 <- read.csv('./results/airindex.csv')
+knitr::kable(tab2, row.names =F, align = "l", caption="空气质量指数及其等级划分",
+      longtable = TRUE, booktabs = TRUE, linesep  = "")
+```
+
+2013年起，环境保护部要求对六种常规污染物进行监测，包括二氧化硫、二氧化氮、一氧化
+碳、臭氧、PM10 和 PM2.5 。《2017中国生态环境状况公报》指出，2017 年，全国 338 个
+地级及以上城市中，有 99 个城市环境空气质量达标，占全部城市数的 29.3% ，239 个城
+市环境空气质量超标，占 70.7% 。338 个城市发生重度污染 2311 次、严重污染 802 次，
+以 PM2.5 为首要污染物的天数占重度及以上污染天数的 74.2% ，以 PM10 为首要污染物的
+占 20.4% ，以臭氧为首要污染物的占 5.9% 。有研究表明， PM2.5 及以下的微粒，75% 会
+在肺泡沉积，长期停留在呼吸系统内，沉积在呼吸系统深处，人体对 PM2.5 没有任何过滤、
+阻拦能力，而 PM2.5 对人体的危害极其恐怖。在欧盟国家中，PM2.5 导致人们的平均寿命
+减少 8.6 个月，在众多污染物中，PM2.5 对健康的影响尤为显著。
+
 ### 空气质量影响因素概述
+
+空气质量的好坏反映了空气污染的程度，空气污染是一个复杂的现象，在特定时间和地点空气质量受
+很多因素的影响，比如常见的空气质量影响因素包括地理因素、气象因素及经济社会因素。
+
+#### 地理因素
+
+地理因素主要包括地形地貌、海拔、是否临海等。地形影响气流，气流影响空气流向。通常情况下，
+地势高的地方空气流通较好，有利于污染物的扩散，空气质量相对较好。同样，地处海边的城市，
+因为有海风和气流的影响，污染物更易扩散，所以相对内陆来讲，临海城市的空气质量一般都要比
+内陆好。
+
+#### 气象因素
+
+气象因素是影响空气质量的主要因素之一。通常影响空气质量的气象因素包括气温、气压、风向、
+风速、降水量、相对湿度等。大气污染在垂直方向的扩散主要取决于气温的垂直分布，当气温较高
+时，大气处于不稳定状态，在热力对流的作用下污染物向上扩散，空气质量就会变好；反之，当
+气温较低时，大气变得稳定，污染物的扩散受到抑制作用，空气质量就会变差。一般来讲，当低
+压控制时，大气处于中性或不稳定状态，低层空气辐合上升，近地面的污染物随空气上升到高空，
+有利于近地面污染物向高空扩散；当高压控制时，空气作下沉运动，并常形成下沉逆温，阻止污
+染物的向上扩散。风是边界层内影响污染物稀释的重要因子，风速是造成快速水平输送或平流的
+主要原因，而风向则决定大气污染物浓度的分布。风速对污染物的浓度环境浓度具有双重影响，
+在一定范围内，风速越大越有利于空气污染物的扩散和稀释，空气质量越优；超过这一范围，风
+速增大将使空气中可吸入颗粒物浓度明显增加，导致空气污染加重。针对降水量，大气降水不仅
+可以冲刷空气中的部分颗粒物，也可以在一定程度上抑制地面扬尘发生，从而有效控制颗粒物的
+排放，对空气质量有较好的净化作用[1]。相对湿度能够促进一次污染物向二次颗粒污染物转化[2]，
+相对湿度较大时，由于常规污染物周围被水分包裹，质量加重，重力增大造成一定程度沉降，从而
+减小污染物浓度，空气质量相对较好[3]。
+
+#### 经济社会因素
+
+现有的大部分研究表明，经济社会因素即人为因素是影响空气质量最重要的因素，主要表现在人
+口因素、经济发展、技术水平、交通运输、绿化建设、能源消耗等方面。空气质量的好坏主要受
+污染物排放的影响，汽车尾气、工厂废气、建筑施工、居民生活和取暖、垃圾焚烧等都会产生一
+定程度的污染排放。一般来讲，一个地区经济发展越好，人口越多，交通越发达，能源消耗越多，
+其污染物排放越多，相应地空气质量也越差；一个地区绿化建设越好，污染治理投入越多，其空
+气质量会越好。
 
 ## 变量选择及数据预处理
 
