--- a/report/znufethesis.cls
+++ b/report/znufethesis.cls
@@ -123,10 +123,22 @@
 \RequirePackage{float}
 \RequirePackage{longtable}
 \RequirePackage{tabularx}
-\setlength{\extrarowheight}{-4pt}
+\setlength{\extrarowheight}{-1pt}
 \RequirePackage{slashbox}
 \RequirePackage[neverdecrease]{paralist}
 \RequirePackage{dcolumn}
+
+\RequirePackage{wrapfig}
+\RequirePackage{colortbl}
+\RequirePackage{pdflscape}
+\RequirePackage{tabu}
+\RequirePackage{threeparttable}
+\RequirePackage{threeparttablex}
+\RequirePackage[normalem]{ulem}
+\RequirePackage{makecell}
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 % -------------------------------------------------------------------------
 
 
