空间分布特征

--- a/report/05-aqi-des.Rmd
+++ b/report/05-aqi-des.Rmd
@@ -874,6 +874,11 @@ knitr::kable(aqi.select.box, row.names =T, align = "c",
 
 ## 城市空气质量空间分布特征
 
+根据以往的研究发现，空气质量存在明显的空间分布特征，为了对所研究城市的空间分布特征
+进行更加清晰的描述，在了解了城市空气质量时间分布特征之后，我们对城市空气质量的空间
+分布特征进行了分析，根据各城市的经度及纬度，绘制了35个城市2017年年均AQI的空间分布图，
+结果如图 \@ref(fig:fig-city-map) 所示。
+
 ```{r fig-city-map, eval=T, fig.height=7, fig.width=6.5,out.width="1.0\\textwidth", fig.pos="H", fig.cap = "35个城市2017年平均AQI空间分布图", dev=c("cairo_pdf"), dev.args=list(family="Microsoft YaHei UI Light")}
 library(ggplot2)
 library(ggrepel)
@@ -912,7 +917,35 @@ ggplot() +
 
 ```
 
-4个区域： 华北西北， 东北， 长江沿线省份城市(包括浙江), 南方
+在图 \@ref(fig:fig-city-map) 中，横轴表示城市经度，纵轴表示城市纬度，图中点的大小
+表示2017年年均空气质量指数的大小，点越大，2017年年均空气质量指数越大，点越小，2017
+年年均空气质量指数越小。图中点的颜色根据空气质量等级划分标准中的颜色进行定义，绿色
+表示空气质量指数为0-50，空气质量等级为优；黄色表示空气质量指数为51-100，空气质量等
+级为良；橙色表示空气质量指数为101-150，空气质量等级为轻度污染。
+
+根据图 \@ref(fig:fig-city-map) 可以看出，海口空气质量最好，2017年年均空气质量等级为
+优；昆明、贵阳、南宁、深圳、厦门、福州、大连2017年年均空气质量等级为良，但是这些城市
+的点的相对较小，说明其年均空气质量指数虽在50-100之间，但是比较偏向50；成都、重庆、
+长沙、武汉、南昌、杭州、合肥、南京、上海、宁波、郑州、青岛、西宁、银川、呼和浩特、
+沈阳、长春、哈尔滨这些城市在2017年年均空气质量指数也位于50-100之间，但其更接近100；
+而乌鲁木齐、兰州、西安、石家庄、北京、天津、太原、济南这些城市的空气质量指数在101-150
+之间，表明这些城市2017年空气质量等级平均来讲处于轻度污染。
+
+根据以上分析，我们可以根据地理位置，结合空气质量指数的具体数值，将城市空气质量指数
+的空间分布基本归为以下四类。第一类是华北和西北地区的城市，主要包括北京、天津、石家庄、
+太原、呼和浩特、西安、兰州、乌鲁木齐、西宁、银川、郑州、青岛、济南，从地理位置来看，
+这些城市的明显特征是位于秦岭淮河以北，且从图中可以发现其空气质量相对较差，尤其是乌鲁
+木齐、兰州、西安、石家庄、北京、天津、太原、济南，这些城市2017年年均空气质量指数均
+超过了100，在所研究的城市中空气质量状况最差。第二类是东北地区，主要包括哈尔滨、长春、
+沈阳、大连，这四所城市2017年年均空气质量指数均在50-100之间，从图中可以发现，大连的
+空气质量稍比其他三所城市好，也许是由于大连临海的优势地理条件，海风有利于污染物的扩散，
+海水也会吸附部分污染物。第三类是长江沿线城市，主要包括成都、重庆、长沙、南昌、武汉、
+合肥、杭州、南京、上海、宁波，这些城市的空气质量指数也在50-100之间，但其处于秦岭淮河
+以南，且其空气质量相对北方城市来讲稍好一点。第四类是华南地区及部分西南地区城市，主要
+包括昆明、贵阳、南宁、广州、深圳、福州、厦门、海口，除广州之外，其余城市空气质量在35
+所城市中表现最佳，且海口是2017年唯一一个年均空气质量为优的城市。以上分析表明，空气
+质量指数存在明显的空间分布特征，整体来讲，北方城市的空气质量比南方城市的空气质量差，
+尤其以华北地区最为严重，且越往南方走，空气质量状况越好。
 
 
 <!--# 参考文献 {-}-->
