--- a/slicing sample.RMD
+++ b/slicing sample.RMD
@@ -66,7 +66,7 @@ Sys.setlocale("LC_ALL", "Chinese")
 5. 用新的$x$ 值从第二步开始重复以上步骤。
 
 这里的动机是，从任意曲线中均匀采样点的一种方法是首先在整条曲线上绘制均匀高度的水平片段。
-然后，可以采样曲线中的一个点，即随机选择一个落在或低于曲线 $x$ （$x$ 来自之前的迭代过程）
+然后，可以采样曲线中的一个点，即随机选择一个落在或低于曲线 $x$ ($x$ 来自之前的迭代过程)
 位置的切片，再沿着切片随机选择一个 $x$ 位置。通过使用之前迭代算法的 $x$ 位置，从长
 远来看，我们选择切片的概率与其在曲线内段的长度有关。
 
