--- a/report/06-aqi-gamm.Rmd
+++ b/report/06-aqi-gamm.Rmd
@@ -32,19 +32,59 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 # 基于广义可加混合模型的城市空气质量影响因素实证分析
 
-从上一章的分析可以看出，城市空气质量形成原因很复杂，不是某一个方面变量所决定，而
-是各个因素的综合作用的结果。
-
-
+上一章我们对城市空气质量的基本状况及其影响因素的基本状况进行了概述，并分析了空气
+质量指数的时空间分布特征。从中可以发现，影响城市空气质量好坏的原因很复杂，并不是
+某一方面决定的，而是各个方面多因素综合作用的结果。因此，本章在上一章的基础上，对
+城市空气质量的影响因素进行分析，探明哪些因素对城市空气质量会产生影响及其具体影响
+方式。
 
 ## 因变量定义及自变量筛选
 
-
-因变量定义不同，影响因素可能是不一样的； 建模原则，从简单到复杂
-除关注平均AQI之外，还需要从正反两个方面研究。
-最终目标是空气质量为优
-
 ### 因变量定义及其分布
+
+在进行分析之前，我们首先进行因变量定义。空气质量指数是反映空气质量好坏的重要指标
+之一，且以空气质量指数作为因变量进行空气质量影响因素的分析也比较合理。但从之前的
+分析中我们可以发现，空气质量指数的大小和空气质量优良的具体情况有明显差异。像之前
+的例子，北京比武汉的年均空气质量指数大，但是北京一年中空气质量为优的天数却比武汉
+多，说明北京的空气质量状况一般比较极端，好坏比较分散，相对来讲武汉的空气质量状况
+比较集中。因此，年均空气质量指数对于空气质量状况只是一个比较笼统的概念。我们进一
+步考虑空气质量状况的两个极端情况，空气质量为优及严重污染。
+
+空气质量为优是我们希望出现的结果，与国外城市相比，国内城市空气质量为优的天数少之
+甚少，空气质量为优是我们所期待出现的结果，空气质量令人满意，基本无空气污染，各类
+人群均可正常活动。严重污染是空气质量等级最差的一种情况，严重的空气污染会导致健康
+人群运动耐受力降低，有明显强烈的症状，身体出现各种不适，对机体的健康产生一定的影
+响，提前出现某些疾病，出现严重污染是我们最不想看到的结果。因此，我们的目标是空气
+质量为优，需要极力杜绝的是空气严重污染。
+
+像之前所提到的，一般来讲，空气质量是实时数据，年度数据分析可以了解其基本概况，月
+度数据分析可能会使结果更加准确，因此，我们从年度和月度两个角度对空气质量状况进行
+分析。在因变量的选取中，关注的问题不同，因变量具体的设置及其服从的分布均有很大差
+别。首先绘制Q-Q图对年均AQI、年度空气质量为优的天数、年度空气质量为严重污染的天数、
+月均AQI、月度空气质量为优的天数、月度空气质量为严重污染的天数进行正态性检验，结果
+如图 \@ref(fig:fig-dep-dist) 所示。从图 \@ref(fig:fig-dep-dist) 可以看出，年均AQI
+基本落在一条直线上，说明年均AQI基本服从正态分布，而年度空气质量为优的天数及和月均
+AQI在Q-Q图中表现出翘尾，年度严重污染的天数、月度空气质量为优的天数及月度空气严重
+污染的天数均表现出很强的非正态性。进一步对这六个变量进行正态性检验，分别采用
+Shapiro-Wilk检验和JB检验，检验结果如表 \@ref(tab:ab-dep-norm) 所示。从表 \@ref(tab:ab-dep-norm) 
+可以看出，无论是从W统计量还是JB统计量来看，年均AQI均不拒绝原假设，认为年均AQI服从
+正态分布，其他变量，年度空气质量为优的天数、年度空气严重污染的天数、月均AQI、月度
+空气质量为优的天数、月度空气严重污染的天数均不服从正态分布。进一步，根据年度空气质
+量为优的天数及月均AQI在图 \@ref(fig:fig-dep-dist) 中表现出的翘尾特征，对其进行对数
+处理，并标准化，将对数处理后的数据与标准正态分布进行比较，结果如图 \@ref(fig:fig-dep-norm) 
+所示。从图 \@ref(fig:fig-dep-norm) 中可以看出，对数化后的年度空气质量为优的天数及
+月均AQI近似服从正态分布，且对数化后的月均AQI与标准正态分布更加接近。因此，将年均AQI、
+对数化后的年度空气质量为优的天数、对数化后的月均AQI均当作正态分布进行处理。而根据
+数据特征，将年度严重污染的天数定义为泊松分布，因为我们更关注每年有多少天出现严重
+污染，而不是每天出现严重污染的概率是多少。同样，月度空气质量为优的天数也定义为泊松
+分布，我们更关注每个月会有多少天空气质量为优。根据原始数据的特点，月度严重污染的天
+数可以定义为泊松分布，且大多数城市的取值均为0，若将其定义为二项分布，则关注点为每天
+出现严重污染的概率，且由原始数据可以看出，概率取值为很小的数。因此，我们对数据进行了
+进一步处理，将月度空气严重污染的天数转化为月度是否出现严重污染进行分析，且这个因变量
+服从两点分布，重点关注月度是否出现严重污染而不是每天出现严重污染的概率。因此，最终
+我们选取的因变量有：年均AQI（正态分布），年度空气质量为优的天数（取对数后近似正态分布）、
+年度严重污染的天数（泊松分布）；月均AQI（取对数后正态分布），月度空气质量为优的天数
+（泊松分布）、月度是否发生严重污染（二点分布）。
 
 ```{r fig-dep-dist, eval=T, fig.height=7,fig.width=6.5,out.width="1.0\\textwidth", fig.pos="h", fig.cap = "AQI，空气质量为优天数，严重污染天数 Q-Q 图", dev=c("cairo_pdf"),dev.args=list(family="Microsoft YaHei UI Light")}
 rm(list=ls())
@@ -139,27 +179,37 @@ legend("topright", legend = c("经验密度", "标准正态密度"),lty=c(1,2), 
 
 ```
 
-关注的问题不同对于因变量设置及其分布有很大影响
-
-正态分布，二项分布（两点分布），泊松分布之间的关系。
-
-1. 在满足一定条件情况下，二项分布和泊松分布的极限分布都是正态分布。
-2. 在满足一定条件情况下，二项分布可以近似为泊松分布。
-
-年度： 平均AQI(正态)， 年空气质量为优天数(近似正态)，年严重污染天数(泊松)
-
-月度： 平均AQI(取对数后正态)， 月空气质量为优天数(泊松)， 月是否发生严重污染(处理后两点分布)
-
-
-
 ### 建模思路
 
-普通模型（LM,GLM）
-混合模型(LMM,GLMM)
-可加模型(GAM, GAMM)
+通过以上分析，我们需要分别对年均AQI、年度空气质量为优的天数、年度严重污染的天数、
+月均AQI、月度空气质量为优的天数、月度是否存在严重污染进行建模，通过这些因变量来
+分析空气质量的影响因素。根据因变量的具体分布，且遵循模型由简单到复杂的原则，对
+服从正态分布的年均AQI、对数化后的年度空气质量为优的天数及对数化后的月均AQI建立
+普通线性模型，进一步分别考虑空气质量城市之间的相关性及自变量对空气质量的非线性
+影响，分别建立线性混合模型及可加混合模型；对于服从泊松分布的年度严重污染的天数、
+月度空气质量为优的天数，建立泊松回归模型，同样分别考虑城市之间的相关性及自变量
+的非线性影响，分别建立泊松混合模型及泊松可加模型，最后综合考虑城市之间的相关性
+及自变量的非线性影响，建立泊松可加混合模型进行相应分析。同样，对于服从二点分布
+的月度是否发生严重污染，分别建立logistic回归模型、二项混合模型、二项可加模型及
+二项可加混合模型进行相应分析。
 
 #### 基于Lasso的自变量筛选
 
+因变量的定义不同，作为影响因素的自变量有可能也不一样。在我们所建立的指标体系中，
+自变量涉及社会经济因素、气象因素、地理因素共25个指标，在回归分析中，由于自变量
+较多，首先可以进行变量筛选剔除对因变量无显著影响的变量，将剩余变量纳入模型进行
+分析。在变量筛选中，比较常用的方法就是基于lasso的变量筛选方法。因此，首先对不同
+模型采用相应的lasso变量筛选的方法进行自变量筛选。在我们所涉及的模型中，主要涉及
+线性回归模型、线性混合模型、可加混合模型、广义线性模型、广义线性混合模型、广义
+可加模型及广义可加混合模型，目前对于线性回归模型、线性混合模型、广义线性模型、
+广义可加模型都有其对应的基于lasso的变量筛选方法，对于广义可加模型及广义可加混合
+模型还未有人提出相应的基于lasso的变量筛选方法。因此，我们根据已有的基于lasso的
+变量筛选方法对相应的模型进行变量筛选，分别进行分析。进而在建立可加混合模型时，
+选取线性回归模型及线性混合模型中共有的对因变量有显著影响的变量进行分析，并同时
+用相同的变量建立线性回归及线性混合模型，以便于模型之间的比较。同样，对于广义可加
+混合模型，选取广义线性模型、广义线性混合模型及广义可加混合模型中同时对因变量有
+显著影响的变量进行相应分析，同样建立广义线性模型、广义线性混合模型及广义可加混合
+模型便于对比。
 
 ## 空气质量指数（AQI）影响因素分析
 
