--- a/lasso.rmd
+++ b/lasso.rmd
@@ -182,3 +182,28 @@ $$\min _{\alpha, \beta} \frac{1}{N} \sum_{i=1}^{N} f\left(x_{i}, y_{i}, \alpha, 
 
 只有 $\beta$ 被惩罚，而 $\alpha$ 可以自由地取任何允许的值，就像 $\beta_0$ 在基本情况下
 没有被惩罚一样。
+
+# 惩罚似然
+
+模型选择也可以通过应用最小角度选择和收缩器(LASSO)惩罚来实现。这是基于从对数似然中减去回归
+系数绝对值和的一个倍数($\lambda$)，从而将一些回归系数设置为零(Tibshirani,1996)。一些软件
+可(如SAS软件中的PROC GLMSELECT或R包glmnet) (Friedman, Hastie和Tibshirani，2010;SAS
+研究所，2016)允许对线性模型、logistic模型和Cox模型进行惩罚拟合，并优化调优参数 $\lambda$ ,
+该参数通过交叉验证或信息准则来控制惩罚强度。
+
+Lasso模型被广泛用于高维模型的选择问题,即当工具变量的数量 $k$ 远远超过样本大小 $n$ 时的情
+况。在低维问题($k < n$)中，研究人员通常感兴趣的是可解释的回归系数,因此Lasso模型的可解释性
+远低于其预测性能。LASSO估计的回归系数受惩罚强度的影响存在一定程度的偏差，但其均方误差(MSE)
+可能小于传统估计。由于这种偏差，它们在解释性或描述性模型中的解释是困难的，并且基于放回抽样
+过程，如百分位数自助法，的置信区间没有达到它们声称的名义水平。最近Taylor和Tibshirani(2015)
+研究了Lasso模型选择后对回归系数进行有效推断的问题，并提出了解决方案。然而，对于该方法的性
+能还没有足够的证据，有效的推断需要充分捕捉回归系数抽样分布中的偏差和方差分量。然而，要确定
+偏差，需要对偏差分差进行估计，这本质上要求与无偏回归系数进行比较，而无偏回归系数在方差减少
+惩罚框架中是无法得到的。因此，Lasso模型的置信区间甚至可以比包含所有工具变量的模型得出的最
+大似然区间还要大。这也在Taylor和Tibshirani的例子中得到了证明。
+
+LASSO估计的另一个问题是它依赖于协变量的尺度。因此，LASSO在标准软件中实现时，对单位方差执行
+内部标准化，而在它的一些软件实现中，由于回归系数被转换并在原始尺度上报告，所以用户看不到单
+位方差。尽管如此，还不清楚这种“一刀切”的标准化是否适合所有建模目的;例如，考虑连续和二元协
+变量混合的典型情况。连续协变量可以有不同的偏度，二元协变量可以有显著不同的平衡度。不过这种情况
+也得到了解决，例如Porzelius, Schumacher和Binder（2010）。
